--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -26,13 +26,19 @@
         android:textSize="20sp"
         android:id="@+id/app_name_settings"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:fillViewport="true"
+        android:id="@+id/scroll_view2"
+        android:layout_marginTop="75dp"
+        android:layout_height="fill_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:id="@+id/ll7"
-        android:layout_marginTop="90dp"
         >
 
         <ImageButton
@@ -160,5 +166,6 @@
                 />
 
         </LinearLayout>
-    </LinearLayout>
+    </LinearLayout>\
+    </ScrollView>
 </RelativeLayout>
